Small improvements:tm: